SERVER-71608 Add support to jscustomallocator.cpp for FreeBSD

(cherry picked from commit c419698b577f7924d2d6fc6bd3f7bd922f1d0dd7)